@@ -3,12 +3,15 @@
  */
 package net.minecraft.world.entity.ai.gossip;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-import com.mojang.serialization.DataResult;
+import com.mojang.datafixers.kinds.Applicative;
+import com.mojang.logging.LogUtils;
+import com.mojang.serialization.Codec;
 import com.mojang.serialization.Dynamic;
 import com.mojang.serialization.DynamicOps;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import it.unimi.dsi.fastutil.objects.Object2IntMap;
 import it.unimi.dsi.fastutil.objects.Object2IntOpenHashMap;
 import java.util.Arrays;
@@ -22,15 +25,16 @@ import java.util.Set;
 import java.util.UUID;
 import java.util.function.DoublePredicate;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import net.minecraft.core.UUIDUtil;
 import net.minecraft.util.ExtraCodecs;
 import net.minecraft.util.RandomSource;
 import net.minecraft.util.VisibleForDebug;
 import net.minecraft.world.entity.ai.gossip.GossipType;
+import org.slf4j.Logger;
 
 public class GossipContainer {
+    private static final Logger LOGGER = LogUtils.getLogger();
     public static final int DISCARD_THRESHOLD = 2;
     private final Map<UUID, EntityGossips> gossips = Maps.newHashMap();
 
@@ -59,21 +63,21 @@ public class GossipContainer {
     }
 
     private Collection<GossipEntry> selectGossipsForTransfer(RandomSource randomSource, int i) {
-        List list = this.unpack().collect(Collectors.toList());
+        List<GossipEntry> list = this.unpack().toList();
         if (list.isEmpty()) {
             return Collections.emptyList();
         }
         int[] is = new int[list.size()];
         int j = 0;
         for (int k = 0; k < list.size(); ++k) {
-            GossipEntry gossipEntry = (GossipEntry)list.get(k);
+            GossipEntry gossipEntry = list.get(k);
             is[k] = (j += Math.abs(gossipEntry.weightedValue())) - 1;
         }
         Set<GossipEntry> set = Sets.newIdentityHashSet();
         for (int l = 0; l < i; ++l) {
             int m = randomSource.nextInt(j);
             int n = Arrays.binarySearch(is, m);
-            set.add((GossipEntry)list.get(n < 0 ? -n - 1 : n));
+            set.add(list.get(n < 0 ? -n - 1 : n));
         }
         return set;
     }
@@ -134,12 +138,12 @@ public class GossipContainer {
         }
     }
 
-    public <T> Dynamic<T> store(DynamicOps<T> dynamicOps) {
-        return new Dynamic<Object>(dynamicOps, dynamicOps.createList(this.unpack().map(gossipEntry -> gossipEntry.store(dynamicOps)).map(Dynamic::getValue)));
+    public <T> T store(DynamicOps<T> dynamicOps) {
+        return (T)GossipEntry.LIST_CODEC.encodeStart(dynamicOps, this.unpack().toList()).resultOrPartial(string -> LOGGER.warn("Failed to serialize gossips: {}", string)).orElseGet(dynamicOps::emptyList);
     }
 
     public void update(Dynamic<?> dynamic) {
-        dynamic.asStream().map(GossipEntry::load).flatMap(dataResult -> dataResult.result().stream()).forEach(gossipEntry -> this.getOrCreate((UUID)gossipEntry.target).entries.put(gossipEntry.type, gossipEntry.value));
+        GossipEntry.LIST_CODEC.decode(dynamic).resultOrPartial(string -> LOGGER.warn("Failed to deserialize gossips: {}", string)).stream().flatMap(pair -> ((List)pair.getFirst()).stream()).forEach(gossipEntry -> this.getOrCreate((UUID)gossipEntry.target).entries.put(gossipEntry.type, gossipEntry.value));
     }
 
     private static int mergeValuesForTransfer(int i, int j) {
@@ -158,18 +162,18 @@ public class GossipContainer {
         }
 
         public int weightedValue(Predicate<GossipType> predicate) {
-            return this.entries.object2IntEntrySet().stream().filter(entry -> predicate.test((GossipType)((Object)((Object)entry.getKey())))).mapToInt(entry -> entry.getIntValue() * ((GossipType)((Object)((Object)entry.getKey()))).weight).sum();
+            return this.entries.object2IntEntrySet().stream().filter(entry -> predicate.test((GossipType)entry.getKey())).mapToInt(entry -> entry.getIntValue() * ((GossipType)entry.getKey()).weight).sum();
         }
 
         public Stream<GossipEntry> unpack(UUID uUID) {
-            return this.entries.object2IntEntrySet().stream().map(entry -> new GossipEntry(uUID, (GossipType)((Object)((Object)entry.getKey())), entry.getIntValue()));
+            return this.entries.object2IntEntrySet().stream().map(entry -> new GossipEntry(uUID, (GossipType)entry.getKey(), entry.getIntValue()));
         }
 
         public void decay() {
             Iterator objectIterator = this.entries.object2IntEntrySet().iterator();
             while (objectIterator.hasNext()) {
                 Object2IntMap.Entry entry = (Object2IntMap.Entry)objectIterator.next();
-                int i = entry.getIntValue() - ((GossipType)((Object)entry.getKey())).decayPerDay;
+                int i = entry.getIntValue() - ((GossipType)entry.getKey()).decayPerDay;
                 if (i < 2) {
                     objectIterator.remove();
                     continue;
@@ -183,7 +187,7 @@ public class GossipContainer {
         }
 
         public void makeSureValueIsntTooLowOrTooHigh(GossipType gossipType) {
-            int i = this.entries.getInt((Object)gossipType);
+            int i = this.entries.getInt(gossipType);
             if (i > gossipType.max) {
                 this.entries.put(gossipType, gossipType.max);
             }
@@ -193,38 +197,16 @@ public class GossipContainer {
         }
 
         public void remove(GossipType gossipType) {
-            this.entries.removeInt((Object)gossipType);
+            this.entries.removeInt(gossipType);
         }
     }
 
-    static class GossipEntry {
-        public static final String TAG_TARGET = "Target";
-        public static final String TAG_TYPE = "Type";
-        public static final String TAG_VALUE = "Value";
-        public final UUID target;
-        public final GossipType type;
-        public final int value;
-
-        public GossipEntry(UUID uUID, GossipType gossipType, int i) {
-            this.target = uUID;
-            this.type = gossipType;
-            this.value = i;
-        }
+    record GossipEntry(UUID target, GossipType type, int value) {
+        public static final Codec<GossipEntry> CODEC = RecordCodecBuilder.create(instance -> instance.group(((MapCodec)UUIDUtil.CODEC.fieldOf("Target")).forGetter(GossipEntry::target), ((MapCodec)GossipType.CODEC.fieldOf("Type")).forGetter(GossipEntry::type), ((MapCodec)ExtraCodecs.POSITIVE_INT.fieldOf("Value")).forGetter(GossipEntry::value)).apply((Applicative<GossipEntry, ?>)instance, GossipEntry::new));
+        public static final Codec<List<GossipEntry>> LIST_CODEC = CODEC.listOf();
 
         public int weightedValue() {
             return this.value * this.type.weight;
-        }
-
-        public String toString() {
-            return "GossipEntry{target=" + this.target + ", type=" + this.type + ", value=" + this.value + "}";
-        }
-
-        public <T> Dynamic<T> store(DynamicOps<T> dynamicOps) {
-            return new Dynamic<T>(dynamicOps, dynamicOps.createMap(ImmutableMap.of(dynamicOps.createString(TAG_TARGET), UUIDUtil.CODEC.encodeStart(dynamicOps, this.target).result().orElseThrow(RuntimeException::new), dynamicOps.createString(TAG_TYPE), dynamicOps.createString(this.type.id), dynamicOps.createString(TAG_VALUE), dynamicOps.createInt(this.value))));
-        }
-
-        public static DataResult<GossipEntry> load(Dynamic<?> dynamic) {
-            return DataResult.unbox(DataResult.instance().group(dynamic.get(TAG_TARGET).read(UUIDUtil.CODEC), dynamic.get(TAG_TYPE).asString().map(GossipType::byId), dynamic.get(TAG_VALUE).read(ExtraCodecs.POSITIVE_INT)).apply(DataResult.instance(), GossipEntry::new));
         }
     }
 }
